--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<html>
+
 function restoreColor(){
   if (localStorage.bgColor){
     changeBodyColor(localStorage.bgColor);
@@ -123,3 +125,4 @@ function restoreColor(){
   localStorage.fontSize = size;
   document.body.style.fontSize = size;
   }
+</html>
